--- a/bower.json
+++ b/bower.json
@@ -12,6 +12,7 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "bootstrap": "~3.3.0"
+    "bootstrap": "~3.3.0",
+    "font-awesome": "~4.2.0"
   }
 }
