--- a/bower.json
+++ b/bower.json
@@ -13,6 +13,7 @@
   "license": "MIT",
   "dependencies": {
     "bootstrap": "~3.3.0",
-    "font-awesome": "~4.2.0"
+    "font-awesome": "~4.2.0",
+    "qwest": "~0.7.0"
   }
 }
