--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "bootstrap": "~3.3.0",
     "font-awesome": "~4.2.0",
-    "qwest": "~0.7.0"
+    "angular": "~1.3.1",
+    "moment": "~2.8.3",
+    "holderjs": "~2.4.1"
   }
 }
